<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.monkey</groupId>
  <artifactId>KT</artifactId>
  <version>2.1.8</version>
  <packaging>jar</packaging>

  <name>KT</name>

  <properties>
    <java.version>1.8</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.6.0</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
              <configuration>
                  <relocations>
                      <relocation>
                          <pattern>org.bstats</pattern>
                          <shadedPattern>com.monkey.kt.bstats</shadedPattern>
                      </relocation>
                  </relocations>
              </configuration>
          </execution>
        </executions>
      </plugin>
        <!--plugin>
            <groupId>com.github.wvengen</groupId>
            <artifactId>proguard-maven-plugin</artifactId>
            <version>2.7.0</version>
            <executions>
                <execution>
                    <id>proguard</id>
                    <phase>package</phase>
                    <goals>
                        <goal>proguard</goal>
                    </goals>
                    <configuration>
                        <injar>KT-${project.version}-shaded.jar</injar>
                        <outjar>KT-${project.version}-obfuscated.jar</outjar>
                        <options>
                            <option>-dontwarn</option>
                            <option>-dontoptimize</option>
                            <option>-keep public class com.monkey.kt.KT { public static void main(java.lang.String[]); }</option>
                            <option>-keep class com.monkey.kt.** { *; }</option>
                            <option>-keepclassmembers class * { public *; }</option>
                            <option>-keepattributes *Annotation*</option>
                            <option>-keepnames class * extends org.bukkit.plugin.java.JavaPlugin</option>
                            <option>-keep class * implements org.bukkit.event.Listener</option>
                        </options>
                    </configuration>
                </execution>
            </executions>
        </plugin-->
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

  <repositories>
      <repository>
          <id>papermc-repo</id>
          <url>https://repo.papermc.io/repository/maven-public/</url>
      </repository>
      <repository>
          <id>sonatype</id>
          <url>https://oss.sonatype.org/content/groups/public/</url>
      </repository>
      <repository>
          <id>sk89q-repo</id>
          <url>https://maven.enginehub.org/repo/</url>
      </repository>
  </repositories>

  <dependencies>
      <dependency>
          <groupId>io.papermc.paper</groupId>
          <artifactId>paper-api</artifactId>
          <version>1.20-R0.1-SNAPSHOT</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>com.sk89q.worldguard</groupId>
          <artifactId>worldguard-bukkit</artifactId>
          <version>7.0.6</version>
          <scope>provided</scope>
      </dependency>
      <dependency>
          <groupId>org.bstats</groupId>
          <artifactId>bstats-bukkit</artifactId>
          <version>3.0.2</version>
          <scope>compile</scope>
      </dependency>
  </dependencies>
</project>
